update last 2 activities

--- a/en/rezultate.html
+++ b/en/rezultate.html
@@ -235,7 +235,10 @@
               <div class="timeline-text">
                 <h3 class="title-r">Finalist Alliance Captian</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                  We participated in the "Spring starts with Flowers" Demo organized by the Neurobotix(#19054) and 
+                  Robo-Sapiens(#19117) teams, and based on a remarkable performance of our robot and crew, 
+                  we managed to end the competition in the position of "Finalist Alliance Captain", an award 
+                  that gave us confidence in our powers before the offseason and the next year of competition.
                 </p>
               </div>
             </div>
@@ -260,7 +263,10 @@
               <div class="timeline-text">
                 <h3 class="title-r">13<sup>th</sup> Place Quals. (5/6 wins)</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                  The new FTC Into The Deep season brought us a remarkable performance in the 2025 South Regional,
+                  organized in Pitești, where we finished the qualifications with 5 wins out of 6 matches played,
+                  ranking 13th, from which we will remain not only with a very good result, but also with
+                  an experience that none of us will forget anytime soon.
                 </p>
               </div>
             </div>
