--- a/rezultate.html
+++ b/rezultate.html
@@ -235,7 +235,10 @@
               <div class="timeline-text">
                 <h3 class="title-r">Finalist Alliance Captian</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                  Am participat la Demo-ul "Spring starts with Flowers" organizat de echipele Neurobotix(#19054) 
+                  și Robo-Sapiens(#19117), iar în baza unei performanțe remarcabile a robotului și a echipajului 
+                  nostru, am reușit să încheiem concursul în poziția de "Finalist Alliance Captain", premiu ce 
+                  ne-a dat încredere în puterile noastre înaintea extrasezonului și a viitorului an de competiție.
                 </p>
               </div>
             </div>
@@ -260,7 +263,10 @@
               <div class="timeline-text">
                 <h3 class="title-r">13<sup>th</sup> Place Quals. (5/6 wins)</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                  Noul sezon FTC Into The Deep ne-a adus o performanță remarcabilă în cadrul Regionalei Sud 2025, 
+                  organizată la Pitești, unde am încheiat calificările cu 5 victorii din 6 meciuri jucate, 
+                  clasându-ne pe locul 13, din care vom rămâne nu doar cu un rezultat foarte bun, dar și cu 
+                  o experiență pe care niciunul dintre noi nu o va uita prea curând.
                 </p>
               </div>
             </div>
