refactoring echipa.html

--- a/echipa.html
+++ b/echipa.html
@@ -215,47 +215,47 @@
         <div class="box box-voluntar" data-name="pr-v">
           <img src="assets/images/Voluntari/Maya Danilov.JPG" alt="" />
           <h2>Maya Danilov</h2>
-          <span>Voluntar PR & Marketing</span>
+          <span>PR & Marketing</span>
         </div>
         <div class="box box-voluntar" data-name="pr-v">
           <img src="assets/images/Voluntari/Iasmine.JPG" alt="" />
           <h2>Iasmine Adumitroaei</h2>
-          <span>Voluntar PR & Marketing</span>
+          <span>PR & Marketing</span>
         </div>
         <div class="box box-voluntar" data-name="pr-v">
           <img src="assets/images/Voluntari/Razvan Glaje.JPG" alt="" />
           <h2>Răzvan Glaje</h2>
-          <span>Voluntar PR & Marketing</span>
+          <span>PR & Marketing</span>
         </div>
         <div class="box box-voluntar" data-name="grafica-v">
           <img src="assets/images/Voluntari/Isabella.JPG" alt="" />
           <h2>Isabela Ilie</h2>
-          <span>Voluntar Grafică</span>
+          <span>Grafică</span>
         </div>
         <div class="box box-voluntar" data-name="grafica-v">
           <img src="assets/images/Voluntari/Oana Ursache.JPG" alt="" />
           <h2>Oana Ursache</h2>
-          <span>Voluntar Grafică</span>
+          <span>Grafică</span>
         </div>
         <div class="box box-voluntar" data-name="mecanica-v">
           <img src="assets/images/Voluntari/Rares Calugaru.JPG" alt="" />
           <h2>Rareș Călugăru</h2>
-          <span>Voluntar Mecanică</span>
+          <span>Mecanică</span>
         </div>
         <div class="box box-voluntar" data-name="mecanica-v">
           <img src="assets/images/Voluntari/Razvan Dragomir.JPG" alt="" />
           <h2>Răzvan Dragomir</h2>
-          <span>Voluntar Mecanică</span>
+          <span>Mecanică</span>
         </div>
         <div class="box box-voluntar" data-name="programare-v">
           <img src="assets/images/Voluntari/Filip Tiron.JPG" alt="" />
           <h2>Filip Tiron</h2>
-          <span>Voluntar Programare</span>
+          <span>Programare</span>
         </div>
         <div class="box box-voluntar" data-name="programare-v">
           <img src="assets/images/Voluntari/Alexandru Tigau.JPG" alt="" />
           <h2>Alexandru Țigău</h2>
-          <span>Voluntar Programare</span>
+          <span>Programare</span>
         </div>
       </div>
     </div>
@@ -272,29 +272,29 @@
         <div class="box box-mentor" data-name="mecanica-m">
           <img src="assets/images/Mentori/Ioana Preda.JPG" alt="" />
           <h2>Ioana Preda</h2>
-          <span>Mentor Mecanică</span>
+          <span>Mecanică</span>
         </div>
         <!-- Membru 2 -->
         <div class="box box-mentor" data-name="mecanica-m">
           <img src="assets/images/Mentori/Serghei Țirulnic.JPG" alt="" />
           <h2>Serghei Țirulnic</h2>
-          <span>Mentor Mecanică</span>
+          <span>Mecanică</span>
         </div>
         <!-- Membru 3 -->
         <div class="box box-mentor" data-name="mecanica-m">
           <img src="assets/images/Mentori/Ionuț Ghiță.JPG" alt="" />
           <h2>Ionuț Ghiță</h2>
-          <span>Mentor Mecanică</span>
+          <span>Mecanică</span>
         </div>
         <div class="box box-mentor" data-name="programare-m">
           <img src="assets/images/Mentori/Călin Crânguș.JPG" alt="" />
           <h2>Călin Crânguș</h2>
-          <span>Mentor Programare</span>
+          <span>Programare</span>
         </div>
         <div class="box box-mentor" data-name="programare-m">
           <img src="assets/images/Mentori/Ioan Stefan.JPG" alt="" />
           <h2>Ioan Ștefan</h2>
-          <span>Mentor Programare</span>
+          <span>Programare</span>
         </div>
       </div>
     </div>
