--- a/en/echipa.html
+++ b/en/echipa.html
@@ -128,7 +128,7 @@
         <span class="item-link item-membru menu-active" data-name="all">All members</span>
         <span class="item-link item-membru" data-name="grafica">PR & Marketing</span>
         <span class="item-link item-membru" data-name="pr">Graphics Design</span>
-        <span class="item-link item-membru" data-name="mecanica">Robot building</span>
+        <span class="item-link item-membru" data-name="mecanica">Engineering</span>
         <span class="item-link item-membru" data-name="programare">Programming</span>
       </div>
 
@@ -150,7 +150,7 @@
         <div class="box box-membru" data-name="mecanica">
           <img src="../assets/images/Membri/Lucian Bobîrsc.JPG" alt="" />
           <h2>Lucian Bobîrsc</h2>
-          <span>Robot building Leader</span>
+          <span>Engineering Leader</span>
         </div>
         <!-- Membru 5 -->
         <div class="box box-membru" data-name="programare">
@@ -180,19 +180,19 @@
         <div class="box box-membru" data-name="mecanica">
           <img src="../assets/images/Membri/Matei Neamțu.JPG" alt="" />
           <h2>Matei Neamțu</h2>
-          <span>Robot building</span>
+          <span>Engineering</span>
         </div>
         <!-- Membru 3 -->
         <div class="box box-membru" data-name="mecanica">
           <img src="../assets/images/Membri/Călin Tudor.JPG" alt="" />
           <h2>Călin Tudor</h2>
-          <span>Robot building</span>
+          <span>Engineering</span>
         </div>
         <!-- Membru 4 -->
         <div class="box box-membru" data-name="mecanica">
           <img src="../assets/images/Membri/Robert Ciocan.JPG" alt="" />
           <h2>Robert Ciocan </h2>
-          <span>Robot building</span>
+          <span>Engineering</span>
         </div>
       </div>
     </div>
@@ -206,7 +206,7 @@
         <span class="item-link item-voluntar menu-active-v" data-name="all-v">All volunteers</span>
         <span class="item-link item-voluntar" data-name="pr-v">PR & Marketing</span>
         <span class="item-link item-voluntar" data-name="grafica-v">Graphics design</span>
-        <span class="item-link item-voluntar" data-name="mecanica-v">Robot building</span>
+        <span class="item-link item-voluntar" data-name="mecanica-v">Engineering</span>
         <span class="item-link item-voluntar" data-name="programare-v">Programming</span>
       </div>
 
@@ -215,47 +215,47 @@
         <div class="box box-voluntar" data-name="pr-v">
           <img src="../assets/images/Voluntari/Maya Danilov.JPG" alt="" />
           <h2>Maya Danilov</h2>
-          <span>PR & Marketing Volunteer</span>
+          <span>PR & Marketing</span>
         </div>
         <div class="box box-voluntar" data-name="pr-v">
           <img src="../assets/images/Voluntari/Iasmine.JPG" alt="" />
           <h2>Iasmine Adumitroaei</h2>
-          <span>PR & Marketing Volunteer</span>
+          <span>PR & Marketing</span>
         </div>
         <div class="box box-voluntar" data-name="pr-v">
           <img src="../assets/images/Voluntari/Razvan Glaje.JPG" alt="" />
           <h2>Răzvan Glaje</h2>
-          <span>PR & Marketing Volunteer</span>
+          <span>PR & Marketing</span>
         </div>
         <div class="box box-voluntar" data-name="grafica-v">
           <img src="../assets/images/Voluntari/Isabella.JPG" alt="" />
           <h2>Isabela Ilie</h2>
-          <span>Graphics design Volunteer</span>
+          <span>Graphics design</span>
         </div>
         <div class="box box-voluntar" data-name="grafica-v">
           <img src="../assets/images/Voluntari/Oana Ursache.JPG" alt="" />
           <h2>Oana Ursache</h2>
-          <span>Graphics design Volunteer</span>
+          <span>Graphics design</span>
         </div>
         <div class="box box-voluntar" data-name="mecanica-v">
           <img src="../assets/images/Voluntari/Rares Calugaru.JPG" alt="" />
           <h2>Rareș Călugăru</h2>
-          <span>Robot building Volunteer</span>
+          <span>Engineering</span>
         </div>
         <div class="box box-voluntar" data-name="mecanica-v">
           <img src="../assets/images/Voluntari/Razvan Dragomir.JPG" alt="" />
           <h2>Răzvan Dragomir</h2>
-          <span>Robot building Volunteer</span>
+          <span>Engineering</span>
         </div>
         <div class="box box-voluntar" data-name="programare-v">
           <img src="../assets/images/Voluntari/Filip Tiron.JPG" alt="" />
           <h2>Filip Tiron</h2>
-          <span>Programming Volunteer</span>
+          <span>Programming</span>
         </div>
         <div class="box box-voluntar" data-name="programare-v">
           <img src="../assets/images/Voluntari/Alexandru Tigau.JPG" alt="" />
           <h2>Alexandru Țigău</h2>
-          <span>Programming Volunteer</span>
+          <span>Programming</span>
         </div>
       </div>
     </div>
@@ -272,29 +272,29 @@
         <div class="box box-mentor" data-name="mecanica-m">
           <img src="../assets/images/Mentori/Ioana Preda.JPG" alt="" />
           <h2>Ioana Preda</h2>
-          <span>Robot building Mentor</span>
+          <span>Engineering</span>
         </div>
         <!-- Membru 2 -->
         <div class="box box-mentor" data-name="mecanica-m">
           <img src="../assets/images/Mentori/Serghei Țirulnic.JPG" alt="" />
           <h2>Serghei Țirulnic</h2>
-          <span>Robot building Mentor</span>
+          <span>Engineering</span>
         </div>
         <!-- Membru 3 -->
         <div class="box box-mentor" data-name="mecanica-m">
           <img src="../assets/images/Mentori/Ionuț Ghiță.JPG" alt="" />
           <h2>Ionuț Ghiță</h2>
-          <span>Robot building Mentor</span>
+          <span>Engineering</span>
         </div>
         <div class="box box-mentor" data-name="programare-m">
           <img src="../assets/images/Mentori/Călin Crânguș.JPG" alt="" />
           <h2>Călin Crânguș</h2>
-          <span>Programming Mentor</span>
+          <span>Programming</span>
         </div>
         <div class="box box-mentor" data-name="programare-m">
           <img src="../assets/images/Mentori/Ioan Stefan.JPG" alt="" />
           <h2>Ioan Ștefan</h2>
-          <span>Programming Mentor</span>
+          <span>Programming</span>
         </div>
       </div>
     </div>
