many QoL + grammar changes

--- a/en/index.html
+++ b/en/index.html
@@ -149,7 +149,7 @@
           </div>
           <div class="text-desc">
             <p>    
-              Zenith, the robotics team of "Grigore Moisil" National College, is more than just a club for young tech enthusiasts. It is a community, dedicated to innovation and creativity in one of the most fascinating areas of our century: robotics. United by this common passion, we work every day to reach the highest level, participating in various national and international competitions. For us, Zenith has become a space of personal and professional development, where each member brings their unique contribution, contributing to collective success. Every challenge is an opportunity to expand our knowledge and innovate, and mutual support and collaboration help us overcome any obstacle and evolve.
+              Zenith, the robotics team of "Grigore Moisil" National College, is more than just a club for young tech enthusiasts. We are a community dedicated to innovation and creativity in one of the most fascinating areas of our century: robotics. United by this common passion, we work every day to reach higher levels, participating in various national and international competitions. For us, Zenith has become a space of personal and professional development, where each member brings their uniqueness, contributing to collective success. Every challenge is an opportunity to expand our knowledge, innovate, evolve, and overcome any obstacles.
             </p>
           </div>
         </div>
@@ -215,7 +215,7 @@
       <div class="container-b">
         <div class="text-branding">
           <p>
-            Our story begins in 2020, when a group of young people from the 10<sup>th</sup> and 11<sup>th</sup> grades of the "Grigore Moisil" National College set up the SovaTech team with the help of our coordinating teacher Mihaela Garabet. As the years passed, the members who brought the initiative to develop in the STEAM field became mentors, leaving behind a new generation to perpetuate the work of the club. The new members, learning from the mistakes of the previous series, moved on, bringing a new vision to the club and thus set out to reinvent itself under the name Zenith.
+            Our story begins in 2020, when a group of young people from the 10<sup>th</sup> and 11<sup>th</sup> grades of the "Grigore Moisil" National College set up the SovaTech team with the help of our coordinating teacher, Mihaela Garabet. As the years passed, the members who brought the initiative to develop in the STEAM field became mentors, leaving behind a new generation to perpetuate the activity of the club. The new members, learning from the mistakes of the previous series, moved on, bringing a new vision to the club and thus set out to reinvent itself under the name Zenith.
           </p>
         </div>
         <div class = 'tranzit-wrapper'>
@@ -302,7 +302,7 @@
             <div class="obiectiv">
               <h2 class="titlu">Gracious professionalism</h2>
               <p class="paragraf">
-                Gracious proffesionalism is based on encouraging competition based on respect and fairness
+                Gracious professionalism is based on encouraging competition based on respect and fairness
                 where the main goal is not gain, but mutual help.
                 Thus, performance becomes a pretext for the personal and professional development
                 of the participants.
