--- a/en/sponsori.html
+++ b/en/sponsori.html
@@ -111,11 +111,13 @@
         <div class="row justify-content-center g-4">
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
-              <img
-                src="../assets/images/Sponsori/logo_mct.png"
-                alt=""
-                class="grid-img"
-              />
+              <a href="#" target="_blank" class="image-link">
+                <img
+                  src="assets/images/Sponsori/logo_mct.png"
+                  alt=""
+                  class="grid-img"
+                />
+              </a>
               <a href="#" target="_blank" class="grid-link">
 
               </a>
@@ -123,11 +125,13 @@
           </div>
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
-              <img
-                src="../assets/images/Sponsori/logo-anchor-grup.png"
-                alt=""
-                class="grid-img caz-special"
-              />
+              <a href="https://www.anchorgrup.ro/" target="_blank" class="image-link">
+                <img
+                  src="assets/images/Sponsori/logo-anchor-grup.png"
+                  alt=""
+                  class="grid-img caz-special"
+                />
+              </a>
               <a href="https://www.anchorgrup.ro" target="_blank" class="grid-link">
                   Website
               </a>
@@ -135,11 +139,13 @@
           </div>
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
-              <img
-                src="../assets/images/Sponsori/Enpower_Energy.png"
-                alt=""
-                class="grid-img"
-              />
+              <a href="https://enpower.ro/" target="_blank" class="image-link">
+                <img
+                  src="assets/images/Sponsori/Enpower_Energy.png"
+                  alt=""
+                  class="grid-img"
+                />
+              </a>
               <a href="https://enpower.ro" target="_blank" class="grid-link">
                   Website
               </a>
@@ -156,11 +162,13 @@
         <div class="row justify-content-center g-4">
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
-              <img
-                src="../assets/images/Sponsori/Laser_RMC.png"
-                alt=""
-                class="grid-img"
-              />
+              <a href="https://www.laser-rmc.ro/" target="_blank" class="image-link">
+                <img
+                  src="assets/images/Sponsori/Laser_RMC.png"
+                  alt=""
+                  class="grid-img"
+                />
+              </a>
               <a href="https://www.laser-rmc.ro" target="_blank" class="grid-link">
                   Website
               </a>  
@@ -168,11 +176,13 @@
           </div>
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
-              <img
-                src="../assets/images/Sponsori/Sharp_Solutions.svg"
-                alt=""
-                class="grid-img"
-              />
+              <a href="https://sharpsolutions.ro/" target="_blank" class="image-link">
+                <img
+                  src="assets/images/Sponsori/Sharp_Solutions.svg"
+                  alt=""
+                  class="grid-img"
+                />
+              </a>
               <a href="https://sharpsolutions.ro" target="_blank" class="grid-link">
                   Website
               </a>
@@ -180,11 +190,13 @@
           </div>
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
-              <img
-                src="../assets/images/Sponsori/Modular_Services.png"
-                alt=""
-                class="grid-img"
-              />
+              <a href="https://modular.services/" target="_blank" class="image-link">
+                <img
+                  src="assets/images/Sponsori/Modular_Services.png"
+                  alt=""
+                  class="grid-img"
+                />
+              </a>
               <a href="https://modular.services/" target="_blank" class="grid-link">
                   Website
               </a>
@@ -192,11 +204,13 @@
           </div>
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
-              <img
-                src="../assets/images/Sponsori/Enayati_Medical_City.png"
-                alt=""
-                class="grid-img"
-              />
+              <a href="https://enayatimedicalcity.ro/" target="_blank" class="image-link">
+                <img
+                  src="assets/images/Sponsori/Enayati_Medical_City.png"
+                  alt=""
+                  class="grid-img"
+                />
+              </a>
               <a href="https://enayatimedicalcity.ro/" target="_blank" class="grid-link">
                   Website
               </a>
@@ -213,11 +227,13 @@
         <div class="row justify-content-center g-4">
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
-              <img
-                src="../assets/images/Sponsori/Piese_Robotica__2_.png"
-                alt=""
-                class="grid-img"
-              />
+              <a href="https://www.pieserobotica.ro/" target="_blank" class="image-link">
+                <img
+                  src="assets/images/Sponsori/Piese_Robotica__2_.png"
+                  alt=""
+                  class="grid-img"
+                />
+              </a>
               <a href="https://www.pieserobotica.ro/" target="_blank" class="grid-link">
                   Website
               </a>
@@ -225,11 +241,13 @@
           </div>
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
-              <img
-                src="../assets/images/Sponsori/Simav_Print.png"
-                alt=""
-                class="grid-img"
-              />
+              <a href="https://simav.ro/" target="_blank" class="image-link">
+                <img
+                  src="assets/images/Sponsori/Simav_Print.png"
+                  alt=""
+                  class="grid-img"
+                />
+              </a>
               <a href="https://simav.ro/" target="_blank" class="grid-link">
                 Website
               </a>
@@ -237,11 +255,13 @@
           </div>
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
-              <img
-                src="../assets/images/Sponsori/ICPE.png"
-                alt=""
-                class="grid-img"
-              />
+              <a href="https://www.icpe.ro/ro/ssicpe/" target="_blank" class="image-link">
+                <img
+                  src="assets/images/Sponsori/ICPE.png"
+                  alt=""
+                  class="grid-img"
+                />
+              </a>
               <a href="https://www.icpe.ro/ro/ssicpe/" target="_blank" class="grid-link">
                   Website
               </a>
@@ -249,11 +269,13 @@
           </div>
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
-              <img
-                src="../assets/images/Sponsori/Indcar__2_.png"
-                alt=""
-                class="grid-img"
-              />
+              <a href="https://indicar.es/en/" target="_blank" class="image-link">
+                <img
+                  src="assets/images/Sponsori/Indcar__2_.png"
+                  alt=""
+                  class="grid-img"
+                />
+              </a>
               <a href="https://indcar.es/en/" target="_blank" class="grid-link">
                   Website
               </a>
@@ -261,11 +283,13 @@
           </div>
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
-              <img
-                src="../assets/images/Sponsori/Quasar_Comex.png"
-                alt=""
-                class="grid-img"
-              />
+              <a href="https://www.facebook.com/quasarcomex/" target="_blank" class="image-link">
+                <img
+                  src="assets/images/Sponsori/Quasar_Comex.png"
+                  alt=""
+                  class="grid-img"
+                />
+              </a>
               <a href="https://www.facebook.com/quasarcomex/" target="_blank" class="grid-link">
                   Website
               </a>
@@ -282,11 +306,13 @@
         <div class="row justify-content-center g-4">
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
-              <img
-                src="../assets/images/Parteneri/Sigla_CNGM.png"
-                alt=""
-                class="grid-img"
-              />
+              <a href="https://www.moisil.ro/" target="_blank" class="image-link">
+                <img
+                  src="assets/images/Parteneri/Sigla_CNGM.png"
+                  alt=""
+                  class="grid-img"
+                />
+              </a>
               <a href="https://www.moisil.ro/" target="_blank" class="grid-link">
                 Website
               </a>
@@ -294,11 +320,13 @@
           </div>
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
-                <img
-                  src="../assets/images/Parteneri/Sigla_Asociatia_Universitatea_Copiilor.png"
-                  alt=""
-                  class="grid-img caz-special"
-                />
+                <a href="https://unico.org.ro/" target="_blank" class="image-link">
+                  <img
+                    src="assets/images/Parteneri/Sigla_Asociatia_Universitatea_Copiilor.png"
+                    alt=""
+                    class="grid-img caz-special"
+                  />
+                </a>
                 <a href="https://unico.org.ro/" target="_blank" class="grid-link">
                   Website
                 </a>
@@ -308,7 +336,7 @@
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
                 <img
-                  src="../assets/images/Parteneri/Logo%20Narada.png"
+                  src="assets/images/Parteneri/Logo%20Narada.png"
                   alt=""
                   class="grid-img"
                 />
@@ -320,7 +348,7 @@
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
                 <img
-                  src="../assets/images/Parteneri/Sigla%20HartaEdu.png"
+                  src="assets/images/Parteneri/Sigla%20HartaEdu.png"
                   alt=""
                   class="grid-img"
                 />
