--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           <div class="text-desc">
             <p>    
               Zenith, echipa de robotică a Colegiului Național „Grigore Moisil”, este mai mult decât un club destinat tinerilor pasionați de tehnologie. 
-              Este o comunitate, dedicată inovației și creativității într-unul dintre cele mai fascinante domenii ale secolului nostru: robotica. 
+              Este comunitatea noastră, dedicată inovației și creativității într-unul dintre cele mai fascinante domenii ale secolului nostru: robotica. 
               Uniți de această pasiune comună, muncim zi de zi pentru a ajunge la un nivel cât mai înalt, participând la diverse concursuri naționale și internaționale. 
               Pentru noi, Zenith a devenit un spațiu de dezvoltare personală și profesională, unde fiecare membru își aduce aportul unic, contribuind la succesul colectiv. 
               Fiecare provocare este o oportunitate de a ne extinde cunoștințele și de a inova, iar sprijinul reciproc și colaborarea ne ajută să depășim orice obstacol și să evoluăm.
