sponsors eng version bugfix and team visual revamp

--- a/en/sponsori.html
+++ b/en/sponsori.html
@@ -113,7 +113,7 @@
             <div class="partner-square">
               <a href="#" target="_blank" class="image-link">
                 <img
-                  src="assets/images/Sponsori/logo_mct.png"
+                  src="../assets/images/Sponsori/logo_mct.png"
                   alt=""
                   class="grid-img"
                 />
@@ -127,7 +127,7 @@
             <div class="partner-square">
               <a href="https://www.anchorgrup.ro/" target="_blank" class="image-link">
                 <img
-                  src="assets/images/Sponsori/logo-anchor-grup.png"
+                  src="../assets/images/Sponsori/logo-anchor-grup.png"
                   alt=""
                   class="grid-img caz-special"
                 />
@@ -141,7 +141,7 @@
             <div class="partner-square">
               <a href="https://enpower.ro/" target="_blank" class="image-link">
                 <img
-                  src="assets/images/Sponsori/Enpower_Energy.png"
+                  src="../assets/images/Sponsori/Enpower_Energy.png"
                   alt=""
                   class="grid-img"
                 />
@@ -164,7 +164,7 @@
             <div class="partner-square">
               <a href="https://www.laser-rmc.ro/" target="_blank" class="image-link">
                 <img
-                  src="assets/images/Sponsori/Laser_RMC.png"
+                  src="../assets/images/Sponsori/Laser_RMC.png"
                   alt=""
                   class="grid-img"
                 />
@@ -178,7 +178,7 @@
             <div class="partner-square">
               <a href="https://sharpsolutions.ro/" target="_blank" class="image-link">
                 <img
-                  src="assets/images/Sponsori/Sharp_Solutions.svg"
+                  src="../assets/images/Sponsori/Sharp_Solutions.svg"
                   alt=""
                   class="grid-img"
                 />
@@ -192,7 +192,7 @@
             <div class="partner-square">
               <a href="https://modular.services/" target="_blank" class="image-link">
                 <img
-                  src="assets/images/Sponsori/Modular_Services.png"
+                  src="../assets/images/Sponsori/Modular_Services.png"
                   alt=""
                   class="grid-img"
                 />
@@ -206,7 +206,7 @@
             <div class="partner-square">
               <a href="https://enayatimedicalcity.ro/" target="_blank" class="image-link">
                 <img
-                  src="assets/images/Sponsori/Enayati_Medical_City.png"
+                  src="../assets/images/Sponsori/Enayati_Medical_City.png"
                   alt=""
                   class="grid-img"
                 />
@@ -229,7 +229,7 @@
             <div class="partner-square">
               <a href="https://www.pieserobotica.ro/" target="_blank" class="image-link">
                 <img
-                  src="assets/images/Sponsori/Piese_Robotica__2_.png"
+                  src="../assets/images/Sponsori/Piese_Robotica__2_.png"
                   alt=""
                   class="grid-img"
                 />
@@ -243,7 +243,7 @@
             <div class="partner-square">
               <a href="https://simav.ro/" target="_blank" class="image-link">
                 <img
-                  src="assets/images/Sponsori/Simav_Print.png"
+                  src="../assets/images/Sponsori/Simav_Print.png"
                   alt=""
                   class="grid-img"
                 />
@@ -257,7 +257,7 @@
             <div class="partner-square">
               <a href="https://www.icpe.ro/ro/ssicpe/" target="_blank" class="image-link">
                 <img
-                  src="assets/images/Sponsori/ICPE.png"
+                  src="../assets/images/Sponsori/ICPE.png"
                   alt=""
                   class="grid-img"
                 />
@@ -271,7 +271,7 @@
             <div class="partner-square">
               <a href="https://indicar.es/en/" target="_blank" class="image-link">
                 <img
-                  src="assets/images/Sponsori/Indcar__2_.png"
+                  src="../assets/images/Sponsori/Indcar__2_.png"
                   alt=""
                   class="grid-img"
                 />
@@ -285,7 +285,7 @@
             <div class="partner-square">
               <a href="https://www.facebook.com/quasarcomex/" target="_blank" class="image-link">
                 <img
-                  src="assets/images/Sponsori/Quasar_Comex.png"
+                  src="../assets/images/Sponsori/Quasar_Comex.png"
                   alt=""
                   class="grid-img"
                 />
@@ -308,7 +308,7 @@
             <div class="partner-square">
               <a href="https://www.moisil.ro/" target="_blank" class="image-link">
                 <img
-                  src="assets/images/Parteneri/Sigla_CNGM.png"
+                  src="../assets/images/Parteneri/Sigla_CNGM.png"
                   alt=""
                   class="grid-img"
                 />
@@ -322,7 +322,7 @@
             <div class="partner-square">
                 <a href="https://unico.org.ro/" target="_blank" class="image-link">
                   <img
-                    src="assets/images/Parteneri/Sigla_Asociatia_Universitatea_Copiilor.png"
+                    src="../assets/images/Parteneri/Sigla_Asociatia_Universitatea_Copiilor.png"
                     alt=""
                     class="grid-img caz-special"
                   />
