--- a/formular.html
+++ b/formular.html
@@ -145,17 +145,21 @@
           </div> -->
           <div>
             <span class="custom-span">Locație</span>
-            <svg width="32px" height="32px" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16" aria-hidden="true" class="bi bi-pin-map-fill inline-block size-5">
-              <path fill-rule="evenodd" d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8l3-4z"/><path fill-rule="evenodd" d="M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z"/>
-            </svg>
+            
+            <br><br><br><br>
             <a href="https://maps.app.goo.gl/hEzsv8UrBpYcJYDP8" target="_blank"><p>Colegiul Național „Grigore Moisil”, Bulevardul Timișoara, numărul 33, Sector 6, București</p></a>
+            <br><br><br>
           </div>
           <div>
-            <span class="custom-span">Email</span>
+            <span class="custom-span">Contact</span>
             <svg width="32px" height="32px" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16" aria-hidden="true" class="bi bi-envelope inline-block size-5">
               <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
             </svg>
-            <p>zenith.cngm@gmail.com</p><br>
+            <p>Mail: zenith.cngm@gmail.com</p>
+            <p>YouTube: @Zenith-CNGM</p>
+            <p>Facebook: Zenith CNGM</p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/clubul-de-robotic%C4%83-zenith-664100370/" target="_blank">Clubul de robotică Zenith</a></p>
+            <p>Instagram, TikTok, Linktree: @zenith.cngm</p>
           </div>
         </div>
 
@@ -192,8 +196,6 @@
         </form>
 
         </div>
-
-        
       </main>
       <!-- Footer -->
       <footer>
