--- a/formular.html
+++ b/formular.html
@@ -145,21 +145,29 @@
           </div> -->
           <div>
             <span class="custom-span">Locație</span>
-            
-            <br><br><br><br>
-            <a href="https://maps.app.goo.gl/hEzsv8UrBpYcJYDP8" target="_blank"><p>Colegiul Național „Grigore Moisil”, Bulevardul Timișoara, numărul 33, Sector 6, București</p></a>
-            <br><br><br>
+            <!-- Embed google maps -->
+            <div class="google-maps-embed" style="width: 70%!important;">
+              <div class="embed-map-responsive">
+                <div class="embed-map-container">
+                  <iframe class="embed-map-frame" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&height=400&hl=en&q=Colegiul%20National%20Grigore%20Moisil&t=&z=14&ie=UTF8&iwloc=B&output=embed">
+                  </iframe>
+                </div>
+                <style>.embed-map-responsive{position:relative;text-align:right;width:100%!important;height:0;padding-bottom:70.5%;padding-right:100%;}.embed-map-container{overflow:hidden;background:none!important;width:100%!important;height:100%!important;position:absolute;top:0;left:0;right:0;bottom:0;}.embed-map-frame{width:100%!important;height:100%!important;position:absolute;top:0;left:0;}</style>
+              </div>
+            </div>
           </div>
           <div>
             <span class="custom-span">Contact</span>
             <svg width="32px" height="32px" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16" aria-hidden="true" class="bi bi-envelope inline-block size-5">
               <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
             </svg>
+            <br>
             <p>Mail: zenith.cngm@gmail.com</p>
             <p>YouTube: @Zenith-CNGM</p>
             <p>Facebook: Zenith CNGM</p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/clubul-de-robotic%C4%83-zenith-664100370/" target="_blank">Clubul de robotică Zenith</a></p>
             <p>Instagram, TikTok, Linktree: @zenith.cngm</p>
+            <br>
           </div>
         </div>
 
