--- a/en/formular.html
+++ b/en/formular.html
@@ -134,33 +134,6 @@
 
       <!-- Contact page -->
       <main>
-        <!-- Contact info -->
-        <div class="container contact-info">
-          <!-- <div>
-            <span class="custom-span">Phone number</span>
-            <svg width="32px" height="32px" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16" aria-hidden="true" class="bi bi-telephone inline-block size-5">
-              <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
-            </svg>
-            <p> &lt;insert phone number here&gt; </p>
-          </div> -->
-          <div>
-            <span class="custom-span">Location</span>
-            <svg width="32px" height="32px" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16" aria-hidden="true" class="bi bi-pin-map-fill inline-block size-5">
-              <path fill-rule="evenodd" d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8l3-4z"/><path fill-rule="evenodd" d="M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z"/>
-            </svg>
-            <a href="https://maps.app.goo.gl/hEzsv8UrBpYcJYDP8" target="_blank">
-              <p>"Grigore Moisil" National College, Timișoara Boulevard, number 33, Sector 6, Bucharest</p>
-            </a>
-          </div>
-          <div>
-            <span class="custom-span">Email</span>
-            <svg width="32px" height="32px" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16" aria-hidden="true" class="bi bi-envelope inline-block size-5">
-              <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
-            </svg>
-            <p>zenith.cngm@gmail.com</p><br>
-          </div>
-        </div>
-
         <div class="container form-container">
         <span class="custom-span">Contact us</span>
         <form target = "_blank" action="/.netlify/functions/contact" method="POST">
@@ -195,7 +168,34 @@
 
         </div>
 
-        
+        <!-- Contact info -->
+        <div class="container contact-info">
+          <div>
+            <span class="custom-span">Contact us</span>
+            <a href="mailto:zenith.cngm@gmail.com" target="_blank">Mail: zenith.cngm@gmail.com</a>
+            <a href="https://www.youtube.com/@Zenith-CNGM" target="_blank">YouTube: @Zenith-CNGM</p>
+            <a href="https://www.facebook.com/share/14nknGnpCt/" target="_blank">Facebook: Zenith CNGM</a>
+            <a href="https://www.linkedin.com/in/clubul-de-robotic%C4%83-zenith-664100370/" target="_blank">LinkedIn: Clubul de robotică Zenith</a>
+            <p>
+              <a href="https://www.instagram.com/zenith.cngm" target="_blank">Instagram</a>, 
+              <a href="https://www.tiktok.com/@zenith.cngm" target="_blank">TikTok</a>, 
+              <a href="https://linktr.ee/zenith.cngm" target="_blank">Linktree</a>: @zenith.cngm
+            </p>
+          </div>
+          <div>
+            <span class="custom-span">Location</span>
+            <!-- Embed google maps -->
+            <div class="google-maps-embed" style="width: 70%!important;">
+              <div class="embed-map-responsive">
+                <div class="embed-map-container">
+                  <iframe class="embed-map-frame" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&height=400&hl=en&q=Colegiul%20National%20Grigore%20Moisil&t=&z=14&ie=UTF8&iwloc=B&output=embed">
+                  </iframe>
+                </div>
+                <style>.embed-map-responsive{position:relative;text-align:right;width:100%!important;height:0;padding-bottom:70.5%;padding-right:100%;}.embed-map-container{overflow:hidden;background:none!important;width:100%!important;height:100%!important;position:absolute;top:0;left:0;right:0;bottom:0;}.embed-map-frame{width:100%!important;height:100%!important;position:absolute;top:0;left:0;}</style>
+              </div>
+            </div>
+          </div>
+        </div>
       </main>
       <!-- Footer -->
       <footer>
