--- a/en/sponsori.html
+++ b/en/sponsori.html
@@ -113,12 +113,12 @@
             <div class="partner-square">
               <a href="https://www.electricaserv.ro/" target="_blank" class="image-link">
                 <img
-                  src="assets/images/Sponsori/electricaserv.png"
+                  src="../assets/images/Sponsori/electricaserv.png"
                   alt=""
                   class="grid-img"
                 />
               </a>
-              <a href="#" target="_blank" class="grid-link">
+              <a href="https://www.electricaserv.ro/" target="_blank" class="grid-link">
                 Website
               </a>
             </div>
