--- a/en/sponsori.html
+++ b/en/sponsori.html
@@ -132,7 +132,7 @@
                   class="grid-img"
                 />
               </a>
-              <a href="#" target="_blank" class="grid-link">
+              <a href="https://www.electricaserv.ro/" target="_blank" class="grid-link">
                 Website
               </a>
             </div>
