new member photos

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <div class="container-a">
         <div class="image-a">
           <img
-            src="assets/images/Echipa/Echipa_sezon_2025.jpg"
+            src="assets/images/Echipa/Grup mare.jpeg"
             alt=""
           />
         </div>
