quick language fix

--- a/en/echipa.html
+++ b/en/echipa.html
@@ -138,25 +138,25 @@
         <div class="box box-membru" data-name="pr">
           <img src="../assets/images/Echipa/Oameni/Nicolescu Irina.jpeg" alt="" />
           <h2>Irina Nicolescu</h2>
-          <span>Lider PR & Marketing</span>
+          <span>PR & Marketing Leader</span>
         </div>
         <!-- Lider 2 -->
         <div class="box box-membru" data-name="grafica">
           <img src="../assets/images/Echipa/Oameni/Petcu Iasmina.jpeg" alt="" />
           <h2>Iasmina Petcu</h2>
-          <span>Lider Grafică</span>
+          <span>Graphics Design Leader</span>
         </div>
         <!-- Lider 3 -->
         <div class="box box-membru" data-name="mecanica">
           <img src="../assets/images/Echipa/Oameni/Bobirsc Lucian.jpeg" alt="" />
           <h2>Lucian Bobîrsc</h2>
-          <span>Lider Engineering</span>
+          <span>Engineering Leader</span>
         </div>
         <!-- Lider 4 -->
         <div class="box box-membru" data-name="programare">
           <img src="../assets/images/Echipa/Oameni/Grecu Bogdan.jpeg" alt="" />
           <h2>Bogdan Grecu</h2>
-          <span>Lider Programare</span>
+          <span>Programare Leader</span>
         </div>
 
         <!-- Membru 1 -->
@@ -366,19 +366,19 @@
       <div class="team-box">
         <!-- Membru 1 -->
         <div class="box box-mentor" data-name="mecanica-m">
-          <img src="../assets/images/Mentori/Ioana Preda.JPG" alt="" />
+          <img src="../assets/images/Echipa/Oameni/Preda Ioana.jpeg" alt="" />
           <h2>Ioana Preda</h2>
           <span>Engineering <br><i>UPB, FIMM, Mecatronics and Robotics</i></span>
         </div>
         <!-- Membru 2 -->
         <div class="box box-mentor" data-name="mecanica-m">
-          <img src="../assets/images/Mentori/Serghei Țirulnic.JPG" alt="" />
+          <img src="../assets/images/Echipa/Oameni/Tirulnic Serghei.jpeg" alt="" />
           <h2>Serghei Țirulnic</h2>
           <span>Engineering <br><i>UPB, ACS, CTI</i></span>
         </div>
         <!-- Membru 3 -->
         <div class="box box-mentor" data-name="mecanica-m">
-          <img src="../assets/images/Mentori/Ionuț Ghiță.JPG" alt="" />
+          <img src="../assets/images/Echipa/Oameni/Ghita Ionut.jpeg" alt="" />
           <h2>Ionuț Ghiță</h2>
           <span>Engineering <br><i>UPB, FIMM, Mecatronics and Robotics</i></span>
         </div>
