update poza de grup

--- a/echipa.html
+++ b/echipa.html
@@ -106,7 +106,7 @@
     <section class="about-us">
       <div class="container-a">
         <div class="image-a">
-          <img src="assets/images/Echipa/Grup mare.jpeg" alt="" />
+          <img src="assets/images/Echipa/Grup mare fresh.jpeg" alt="" />
         </div>
       </div>
     </section>
