added facultate tooltip

--- a/echipa.html
+++ b/echipa.html
@@ -365,22 +365,31 @@
       <!-- !!! data-name trebuie sa fie exact ca cele de aici de sus !!! -->
       <div class="team-box">
         <!-- Membru 1 -->
-        <div class="box box-mentor" data-name="mecanica-m">
+        <div class="box box-mentor" data-name="mecanica-m" style="overflow: visible;">
           <img src="assets/images/Echipa/Oameni/Preda Ioana.jpeg" alt="" />
           <h2>Ioana Preda</h2>
-          <span>Mecanică <br><i>UPB, FIMM, Mecatronică și Robotică</i></span>
+          <span style = "margin-bottom: 0;">Mecanică</span>
+          <span class = 'facultate-tooltip'><i>UPB, FIMM</i>
+            <div class = 'facultate-tooltiptext'> <i>Universitatea POLITEHNICA București - Facultatea de Inginerie Mecanică și Mecatronică</i> </div>
+          </span>
         </div>
         <!-- Membru 2 -->
-        <div class="box box-mentor" data-name="mecanica-m">
+        <div class="box box-mentor" data-name="mecanica-m" style="overflow: visible;">
           <img src="assets/images/Echipa/Oameni/Tirulnic Serghei.jpeg" alt="" />
           <h2>Serghei Țirulnic</h2>
-          <span>Mecanică <br><i>UPB, ACS, CTI</i></span>
+          <span style = "margin-bottom: 0;">Mecanică</span>
+          <span class = 'facultate-tooltip'><i>UPB, AC</i>
+            <div class = 'facultate-tooltiptext'> <i>Universitatea POLITEHNICA București - Facultatea de Automatică și Calculatoare</i> </div>
+          </span>
         </div>
         <!-- Membru 3 -->
-        <div class="box box-mentor" data-name="mecanica-m">
+        <div class="box box-mentor" data-name="mecanica-m" style="overflow: visible;">
           <img src="assets/images/Echipa/Oameni/Ghita Ionut.jpeg" alt="" />
           <h2>Ionuț Ghiță</h2>
-          <span>Mecanică <br><i>UPB, FIMM, Mecatronică și Robotică</i></span>
+          <span style = "margin-bottom: 0;">Mecanică</span>
+          <span class = 'facultate-tooltip'><i>UPB, FIMM</i>
+            <div class = 'facultate-tooltiptext'> <i>Universitatea POLITEHNICA București - Facultatea de Inginerie Mecanică și Mecatronică</i> </div>
+          </span>
         </div>
       </div>
     </div>
