--- a/en/echipa.html
+++ b/en/echipa.html
@@ -365,22 +365,31 @@
       <!-- !!! data-name trebuie sa fie exact ca cele de aici de sus !!! -->
       <div class="team-box">
         <!-- Membru 1 -->
-        <div class="box box-mentor" data-name="mecanica-m">
+        <div class="box box-mentor" data-name="mecanica-m" style="overflow: visible;">
           <img src="../assets/images/Echipa/Oameni/Preda Ioana.jpeg" alt="" />
           <h2>Ioana Preda</h2>
-          <span>Engineering <br><i>UPB, FIMM, Mecatronics and Robotics</i></span>
+          <span style = "margin-bottom: 0;">Engineering</span>
+          <span class = 'facultate-tooltip'><i>UPB, FIMM</i>
+            <div class = 'facultate-tooltiptext'> <i>POLITEHNICA University of Bucharest - Faculty of Mechanical and Mechatronics Engineering</i> </div>
+          </span>
         </div>
         <!-- Membru 2 -->
-        <div class="box box-mentor" data-name="mecanica-m">
+        <div class="box box-mentor" data-name="mecanica-m" style="overflow: visible;">
           <img src="../assets/images/Echipa/Oameni/Tirulnic Serghei.jpeg" alt="" />
           <h2>Serghei Țirulnic</h2>
-          <span>Engineering <br><i>UPB, ACS, CTI</i></span>
+          <span style = "margin-bottom: 0;">Engineering</span>
+          <span class = 'facultate-tooltip'><i>UPB, FIMM</i>
+            <div class = 'facultate-tooltiptext'> <i>POLITEHNICA University of Bucharest - Faculty of Automatic Control and Computers</i> </div>
+          </span>
         </div>
         <!-- Membru 3 -->
-        <div class="box box-mentor" data-name="mecanica-m">
+        <div class="box box-mentor" data-name="mecanica-m" style="overflow: visible;">
           <img src="../assets/images/Echipa/Oameni/Ghita Ionut.jpeg" alt="" />
           <h2>Ionuț Ghiță</h2>
-          <span>Engineering <br><i>UPB, FIMM, Mecatronics and Robotics</i></span>
+          <span style = "margin-bottom: 0;">Engineering</span>
+          <span class = 'facultate-tooltip'><i>UPB, FIMM</i>
+            <div class = 'facultate-tooltiptext'> <i>POLITEHNICA University of Bucharest - Faculty of Mechanical and Mechatronics Engineering</i> </div>
+          </span>
         </div>
       </div>
     </div>
