--- a/formular.html
+++ b/formular.html
@@ -169,29 +169,35 @@
         </div>
 
         <!-- Contact info -->
-        <div class="container contact-info">
-          <div>
-            <span class="custom-span">Contact</span>
-            <a href="mailto:zenith.cngm@gmail.com" target="_blank">Mail: zenith.cngm@gmail.com</a>
-            <a href="https://www.youtube.com/@Zenith-CNGM" target="_blank">YouTube: @Zenith-CNGM</p>
-            <a href="https://www.facebook.com/share/14nknGnpCt/" target="_blank">Facebook: Zenith CNGM</a>
-            <a href="https://www.linkedin.com/in/clubul-de-robotic%C4%83-zenith-664100370/" target="_blank">LinkedIn: Clubul de robotică Zenith</a>
-            <p>
-              <a href="https://www.instagram.com/zenith.cngm" target="_blank">Instagram</a>, 
-              <a href="https://www.tiktok.com/@zenith.cngm" target="_blank">TikTok</a>, 
-              <a href="https://linktr.ee/zenith.cngm" target="_blank">Linktree</a>: @zenith.cngm
-            </p>
+        <div class="container">
+          <div class="contact-info-header" onclick="toggle_contact_info()">
+            <span class="custom-span">Mai multe informații</span>
+            <span class="dropdown-arrow">></span>
           </div>
-          <div>
-            <span class="custom-span">Locație</span>
-            <!-- Embed google maps -->
-            <div class="google-maps-embed" style="width: 70%!important;">
-              <div class="embed-map-responsive">
-                <div class="embed-map-container">
-                  <iframe class="embed-map-frame" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&height=400&hl=en&q=Colegiul%20National%20Grigore%20Moisil&t=&z=14&ie=UTF8&iwloc=B&output=embed">
-                  </iframe>
+
+          <div class="container contact-info-content">
+            <div>
+              <span class="custom-span">Contact</span>
+              <a href="mailto:zenith.cngm@gmail.com" target="_blank">Mail: zenith.cngm@gmail.com</a>
+              <a href="https://www.youtube.com/@Zenith-CNGM" target="_blank">YouTube: @Zenith-CNGM</p>
+              <a href="https://www.facebook.com/share/14nknGnpCt/" target="_blank">Facebook: Zenith CNGM</a>
+              <a href="https://www.linkedin.com/in/clubul-de-robotic%C4%83-zenith-664100370/" target="_blank">LinkedIn: Clubul de robotică Zenith</a>
+              <p>
+                <a href="https://www.instagram.com/zenith.cngm" target="_blank">Instagram</a>, 
+                <a href="https://www.tiktok.com/@zenith.cngm" target="_blank">TikTok</a>, 
+                <a href="https://linktr.ee/zenith.cngm" target="_blank">Linktree</a>: @zenith.cngm
+              </p>
+            </div>
+            <div>
+              <span class="custom-span">Locație</span>
+              <!-- Embed google maps -->
+              <div class="google-maps-embed" style="width: 70%!important;">
+                <div class="embed-map-responsive">
+                  <div class="embed-map-container">
+                    <iframe class="embed-map-frame" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&height=400&hl=en&q=Colegiul%20National%20Grigore%20Moisil&t=&z=14&ie=UTF8&iwloc=B&output=embed">
+                    </iframe>
+                  </div>
                 </div>
-                <style>.embed-map-responsive{position:relative;text-align:right;width:100%!important;height:0;padding-bottom:70.5%;padding-right:100%;}.embed-map-container{overflow:hidden;background:none!important;width:100%!important;height:100%!important;position:absolute;top:0;left:0;right:0;bottom:0;}.embed-map-frame{width:100%!important;height:100%!important;position:absolute;top:0;left:0;}</style>
               </div>
             </div>
           </div>
@@ -277,6 +283,7 @@
     <script src="./assets/js/nav.js"></script>
     <script src="./assets/js/bttb.js"></script>
     <script src="./assets/js/dark_mode.js"></script>
+    <script src="./assets/js/formular.js"></script>
 
     <script src = 'assets/js/submitform.js'></script>
 
